--- a/pages/p14.md
+++ b/pages/p14.md
@@ -1,1 +1,173 @@
+# **Java Inheritance Problems - Programming Exercises** 
+
+---
+
+## 🔵 Basic Single Inheritance Problems
+
+### 1️⃣ **Single Inheritance — Employee & Manager**
+
+* **Base Class:** `Employee`
+  Attributes: `name`, `empId`, `salary`
+  Method: `displayDetails()`
+* **Derived Class:** `Manager` extends `Employee`
+  Extra Attribute: `department`
+  Extra Method: `displayManagerDetails()`
+* **Guidance:**
+  Use `super` to initialize parent attributes. Display both employee and manager details using methods.
+
+---
+
+### 2️⃣ **Single Inheritance — Animal & Dog**
+
+* **Base Class:** `Animal` with method `makeSound()`
+* **Derived Class:** `Dog` extends `Animal`
+  Overrides `makeSound()` to print `"Bark"`
+* **Guidance:**
+  Show how a subclass can override the method of the parent class.
+
+---
+
+### 3️⃣ **Single Inheritance — Vehicle & Car with Overriding**
+
+* **Base Class:** `Vehicle` with method `start()`
+* **Derived Class:** `Car` overrides `start()`
+* **Guidance:**
+  Use both method overriding and access parent method using `super.start()`.
+
+---
+
+## 🟢 Multilevel Inheritance Problems
+
+### 4️⃣ **Multilevel Inheritance — Person > Employee > Manager**
+
+* **Level 1:** `Person` (name, age)
+* **Level 2:** `Employee` extends `Person` (empId, salary)
+* **Level 3:** `Manager` extends `Employee` (department)
+* **Guidance:**
+  Initialize data using constructors at each level and display details hierarchically.
+
+---
+
+### 5️⃣ **Multilevel Inheritance — Shape > Rectangle > ColoredRectangle**
+
+* **Shape:** `Shape` with `color`
+* **Rectangle:** extends `Shape` with `length` and `breadth`
+* **ColoredRectangle:** extends `Rectangle` with method `displayColorAndArea()`
+* **Guidance:**
+  Demonstrate passing data through constructor chaining.
+
+---
+
+## 🟣 Hierarchical Inheritance Problems
+
+### 6️⃣ **Hierarchical Inheritance — Animal, Dog, Cat**
+
+* **Base Class:** `Animal`
+* **Subclasses:** `Dog`, `Cat` extend `Animal`
+* **Methods:**
+
+  * `Animal` — `eat()`
+  * `Dog` — `bark()`
+  * `Cat` — `meow()`
+* **Guidance:**
+  Test both subclasses accessing base class methods.
+
+---
+
+### 7️⃣ **Hierarchical Inheritance — Shape, Circle, Square**
+
+* **Base Class:** `Shape` with method `area()`
+* **Subclasses:** `Circle`, `Square` override `area()`
+* **Guidance:**
+  Use method overriding and polymorphism.
+
+---
+
+### 8️⃣ **Hierarchical Inheritance — Employee, Developer, Tester**
+
+* **Base Class:** `Employee` with `work()`
+* **Subclasses:** `Developer` and `Tester` with overridden `work()`
+* **Guidance:**
+  Use inheritance to represent different job roles.
+
+---
+
+## 🔴 Method Overriding & Use of super() Problems
+
+### 9️⃣ **Method Overriding with Super — Account & SavingsAccount**
+
+* **Base Class:** `Account` with `calculateInterest()`
+* **Derived Class:** `SavingsAccount` overrides `calculateInterest()`
+  Uses `super.calculateInterest()` to add extra bonus interest.
+* **Guidance:**
+  Use method overriding and `super` method call.
+
+---
+
+### 🔟 **Method Overriding — University > College > Department**
+
+* **University:** `displayInfo()`
+* **College:** extends `University`, overrides `displayInfo()`
+* **Department:** extends `College`, overrides `displayInfo()`
+* **Guidance:**
+  Call methods and observe method overriding at each level.
+
+---
+
+### 1️⃣1️⃣ **Method Overriding with Different Access Modifiers**
+
+* **Parent Class:** `Library` with `protected void issueBook()`
+* **Child Class:** `SchoolLibrary` overrides `issueBook()` with `public`
+* **Guidance:**
+  Explain widening access in overridden methods.
+
+---
+
+## 🟠 Real-world Case Studies using Inheritance
+
+### 1️⃣2️⃣ **Online Store — User & Customer**
+
+* **Base Class:** `User` (username, password)
+* **Derived Class:** `Customer` (cart, addToCart())
+* **Guidance:**
+  Show login feature inherited, purchase-related feature in subclass.
+
+---
+
+### 1️⃣3️⃣ **Transport System — Transport, Bus, Train**
+
+* **Base Class:** `Transport` with `start()`, `stop()`
+* **Subclasses:** `Bus`, `Train` with their own `route()` methods
+* **Guidance:**
+  Show how base class handles common actions.
+
+---
+
+### 1️⃣4️⃣ **School System — Person, Student, Teacher**
+
+* **Base Class:** `Person` with `name`, `age`
+* **Subclasses:** `Student` (grade), `Teacher` (subject)
+* **Guidance:**
+  Display how inheritance models real-life entities.
+
+---
+
+### 1️⃣5️⃣ **E-commerce — Product, Electronic, Grocery**
+
+* **Base Class:** `Product` with `price`, `name`
+* **Subclasses:** `Electronic` (warranty), `Grocery` (expiryDate)
+* **Guidance:**
+  Use inheritance to manage different product types.
+
+---
+
+## ✅ Concepts Covered:
+
+* Single, Multilevel, Hierarchical Inheritance
+* Method Overriding & super()
+* Access Specifiers in Inheritance
+* Constructor Chaining
+* Real-world Class Modeling with Inheritance
+
+---
 
