--- a/pages/p10-1.md
+++ b/pages/p10-1.md
@@ -1,1 +1,132 @@
+# **String Handling Special 01 - Programming Exercises**
+
+### 1️⃣ **Arrange the letters in a string (Alphabetical Order)**
+
+**Problem:**
+Write a Java program that takes a word (string) as input and arranges its letters in alphabetical order.
+
+**Example:**
+Input: `"planet"`
+Output: `"aelnpt"`
+
+**Approach:**
+
+* Read the input string.
+* Convert the string to a character array.
+* Use `Arrays.sort()` to sort the character array.
+* Convert the sorted array back to a string and print it.
+
+---
+
+### 2️⃣ **Check if two strings are anagrams**
+
+**Problem:**
+Write a Java program to check if two input strings are anagrams of each other (contain the same characters in different orders).
+
+**Example:**
+Input: `"listen"`, `"silent"`
+Output: `Yes, they are anagrams.`
+
+**Approach:**
+
+* Take two input strings.
+* Remove spaces and convert to lowercase (if needed).
+* Convert both strings to character arrays.
+* Sort both arrays using `Arrays.sort()`.
+* Compare the sorted arrays using `Arrays.equals()`.
+
+---
+
+### 3️⃣ **Print all possible anagrams of a word (Permutations)**
+
+**Problem:**
+Write a Java program to generate and print all possible anagrams (permutations) of a given word.
+
+**Example:**
+Input: `"abc"`
+Output:
+
+```
+abc  
+acb  
+bac  
+bca  
+cab  
+cba  
+```
+
+**Approach:**
+
+* Use recursion and backtracking:
+
+  * Swap characters at different positions.
+  * Recurse for the remaining substring.
+  * Backtrack by swapping the characters back after recursion.
+* Base condition: If the current position is at the end of the string, print it.
+
+---
+
+### 4️⃣ **Convert a word to its Pig Latin equivalent**
+
+**Problem:**
+Write a Java program that converts a word to Pig Latin.
+**Pig Latin Rule:**
+
+* If the word starts with a vowel, add `"way"` to the end.
+* If the word starts with a consonant, move all consonants before the first vowel to the end and add `"ay"`.
+
+**Example:**
+Input: `"hello"`
+Output: `"ellohay"`
+
+Input: `"apple"`
+Output: `"appleway"`
+
+**Approach:**
+
+* Check if the first character is a vowel (`a, e, i, o, u`).
+* If vowel, append `"way"`.
+* If consonant, find the first vowel’s position, move consonants before it to the end, append `"ay"`.
+
+---
+
+### 6️⃣ **Reverse letters in each word of a sentence, keep word order unchanged**
+
+**Problem:**
+Write a Java program that reverses each word in a sentence individually while keeping the word sequence in its original order.
+
+**Example:**
+Input: `"Java is fun"`
+Output: `"avaJ si nuf"`
+
+**Approach:**
+
+* Split the sentence into words using `split(" ")`.
+* Reverse each word using a loop or `StringBuilder.reverse()`.
+* Join the reversed words with a space separator and print.
+
+---
+
+### 7️⃣ **Use a special logic to encode a message (Custom Cipher)**
+
+**Problem:**
+Write a Java program that encodes a message using a special logic:
+
+* Shift each character by **3 positions forward** in ASCII (Caesar Cipher).
+* For example, `'a'` becomes `'d'`, `'z'` becomes `'c'`.
+* Handle wrap-around for alphabets.
+
+**Example:**
+Input: `"abc xyz"`
+Output: `"def abc"`
+
+**Approach:**
+
+* Read the input message.
+* Loop through each character:
+
+  * If it’s a lowercase letter, shift and wrap using `(char)((ch - 'a' + 3) % 26 + 'a')`.
+  * If it’s an uppercase letter, apply similar logic with `'A'`.
+  * Leave other characters unchanged.
+* Concatenate and print the encoded message.
 
