--- a/pages/p00.md
+++ b/pages/p00.md
@@ -1,4 +1,4 @@
-# **Level 0 - Fundamental Logic - Programming Exercises**
+# **Level 0 - Fundamental Programming Logic - Programming Exercises**
 
 ---
 
