--- a/XI-XII/p01.md
+++ b/XI-XII/p01.md
@@ -1,1 +1,168 @@
+# **Flow of Control (Slightly Advanced ISC Level)**
+
+---
+
+### 1️⃣ **Prime Number Pattern**
+
+Write a program to print the first `n` prime numbers in a triangular pattern.
+For example, if `n = 10`, print:
+
+```
+2  
+3 5  
+7 11 13  
+17 19 23 29  
+```
+
+---
+
+### 2️⃣ **Special Number Checker**
+
+A number is called a **Special Number** if the sum of the factorial of its digits equals the number itself (e.g., 145 = 1! + 4! + 5!).
+Write a program to input a number and check whether it is a Special Number.
+
+---
+
+### 3️⃣ **Amicable Numbers**
+
+Two numbers are **Amicable** if the sum of the proper divisors of each is equal to the other.
+Input two numbers and check if they are amicable.
+
+---
+
+### 4️⃣ **Magic Square Validator**
+
+Input a 3×3 matrix and check if it forms a **Magic Square** (sum of each row, column, and diagonal are the same).
+Use nested `for` loops and condition checks.
+
+---
+
+### 5️⃣ **Pascals Triangle**
+
+Print the first `n` rows of **Pascal's Triangle** using nested loops and combination formula.
+
+---
+
+### 6️⃣ **Kaprekar Number Detector**
+
+A number is a **Kaprekar number** if the square of the number can be split into two parts that add up to the number itself.
+Example: 45 → 45² = 2025 → 20 + 25 = 45.
+Write a program to check this property.
+
+---
+
+### 7️⃣ **Menu-Driven Calculator with Switch-Case**
+
+Create a menu-driven calculator that repeatedly asks for operation until the user chooses to exit.
+Operations: Addition, Subtraction, Multiplication, Division, Modulus, Power.
+
+---
+
+### 8️⃣ **Decimal to Roman Converter**
+
+Input a number between 1 and 3999 and convert it into a Roman numeral using flow control.
+
+---
+
+### 9️⃣ **Palindrome Pyramid Pattern**
+
+Print a pattern like this for `n = 5`:
+
+```
+    1  
+   121  
+  12321  
+ 1234321  
+123454321  
+```
+
+---
+
+### 🔟 **Number to Words Converter**
+
+Input a number up to 9999 and print its word form.
+Example: `245` → `Two Hundred Forty Five`
+
+---
+
+### 1️⃣1️⃣ **Diamond Star Pattern**
+
+Print a diamond-shaped star pattern for a given odd number of rows. Example for 5 rows:
+
+```
+  *  
+ ***  
+*****  
+ ***  
+  *  
+```
+
+---
+
+### 1️⃣2️⃣ **Armstrong Number Finder (All 3-digit numbers)**
+
+Display all **Armstrong Numbers** between 100 and 999 using nested loops and modulus operation.
+
+---
+
+### 1️⃣3️⃣ **Automorphic Number Checker**
+
+A number is **Automorphic** if its square ends with the number itself.
+Example: `76 → 76² = 5776`.
+Write a program to check.
+
+---
+
+### 1️⃣4️⃣ **Twin Prime Pairs within Range**
+
+Accept a range and print all **twin prime pairs** within the range.
+Example: `(3, 5)`, `(5, 7)`, `(11, 13)`.
+
+---
+
+### 1️⃣5️⃣ **Floyd’s Triangle with Odd Numbers Only**
+
+Print Floyd’s triangle for first `n` rows using only odd numbers.
+
+---
+
+### 1️⃣6️⃣ **Series Sum with Alternating Sign**
+
+Calculate the sum of the following series up to `n` terms:
+`S = 1 - 2 + 3 - 4 + 5 - 6 + ... ± n`
+
+---
+
+### 1️⃣7️⃣ **HCF and LCM Calculator without Built-in Functions**
+
+Input two numbers and calculate their **HCF** and **LCM** using Euclidean algorithm and loops.
+
+---
+
+### 1️⃣8️⃣ **Sum of Digits until Single Digit (Digital Root)**
+
+Input a number and repeatedly add its digits until a single-digit number is obtained.
+Example: `9875 → 9+8+7+5 = 29 → 2+9 = 11 → 1+1 = 2`
+
+---
+
+### 1️⃣9️⃣ **Perfect Number Finder within Range**
+
+Display all **Perfect Numbers** between 1 and 10000 using loops.
+
+---
+
+### 2️⃣0️⃣ **Pattern of Alphabets in Right Angle Triangle**
+
+Print this pattern for `n = 5`:
+
+```
+A  
+B C  
+D E F  
+G H I J  
+K L M N O  
+```
+
+
 
