--- a/XI-XII/p05.md
+++ b/XI-XII/p05.md
@@ -1,1 +1,220 @@
+# **Using Library Classes and Packages**
+Covering **I/O, Exceptions, Wrapper Classes, Strings, StringBuffers, Accessor Methods, Dates & Times, and User-Defined Packages**
+
+---
+
+## 📁 **A. I/O & Exception Handling (Java I/O, Scanner, BufferedReader, FileWriter)**
+
+### 1️⃣ **Read and Write Student Records to a File**
+
+* Create a program to input student details (name, roll, marks) and write them to a text file.
+* Read the file later and display records.
+* Handle **IOException**.
+
+---
+
+### 2️⃣ **Word Count from a Text File**
+
+* Read a text file and count the number of words, lines, and characters.
+* Handle file exceptions and display counts properly.
+
+---
+
+### 3️⃣ **Copy Contents of One File to Another**
+
+* Write a program that reads from `input.txt` and writes the contents to `output.txt`.
+* Use BufferedReader and BufferedWriter.
+
+---
+
+### 4️⃣ **Append Data to an Existing File**
+
+* Open a file in append mode and write new data to it.
+* Display updated contents after writing.
+
+---
+
+### 5️⃣ **Search a Word in a File and Count Occurrences**
+
+* Input a word from the user.
+* Search for this word in a text file and display how many times it occurs.
+
+---
+
+### 6️⃣ **Exception Handling for Invalid File Access**
+
+* Try opening a file that does not exist.
+* Handle **FileNotFoundException** and display an error message.
+
+---
+
+## 🔢 **B. Wrapper Classes and Autoboxing/Unboxing**
+
+### 7️⃣ **Sum of Digits Using Character and Integer Wrappers**
+
+* Read digits as a string.
+* Convert each character to Integer using `Character.getNumericValue()` and sum them.
+
+---
+
+### 8️⃣ **Prime Number Checking with Autoboxing**
+
+* Use `Integer` wrapper class with autoboxing to check if a number is prime.
+
+---
+
+### 9️⃣ **Maximum of Three Numbers using Wrapper Classes**
+
+* Accept three integers, wrap them using `Integer` class, and find the maximum using `compareTo()` method.
+
+---
+
+### 🔟 **Character Properties using Character Class**
+
+* Input a string and count uppercase, lowercase, digits, and special characters using **Character** class methods.
+
+---
+
+## 📝 **C. Strings and StringBuffer**
+
+### 1️⃣1️⃣ **Palindrome Checker using String and StringBuffer**
+
+* Check if a given string is a palindrome using **StringBuffer reverse()** method.
+
+---
+
+### 1️⃣2️⃣ **Count Vowels, Consonants, Digits, Spaces in a String**
+
+* Input a sentence and count vowels, consonants, digits, and spaces separately.
+
+---
+
+### 1️⃣3️⃣ **Toggle Case of a String using StringBuffer**
+
+* Convert uppercase to lowercase and vice versa using character manipulation and **StringBuffer**.
+
+---
+
+### 1️⃣4️⃣ **Check if Two Strings are Anagrams**
+
+* Accept two strings.
+* Check if they are anagrams by sorting and comparing.
+
+---
+
+### 1️⃣5️⃣ **Remove Punctuation from a String**
+
+* Accept a paragraph as input and remove all punctuation marks.
+* Use regex and String methods.
+
+---
+
+### 1️⃣6️⃣ **Find Longest Word in a Sentence**
+
+* Input a sentence and print the longest word.
+* Use `split()` and String manipulation.
+
+---
+
+### 1️⃣7️⃣ **Count Frequency of Each Word in a Sentence**
+
+* Tokenize sentence into words.
+* Count frequency using a loop.
+
+---
+
+## 📅 **D. Date, Time, and Calendar Classes**
+
+### 1️⃣8️⃣ **Display Current Date and Time**
+
+* Use `LocalDateTime` and `DateTimeFormatter` to display the current date and time in `dd-MM-yyyy HH:mm:ss` format.
+
+---
+
+### 1️⃣9️⃣ **Check if a Given Date is Valid**
+
+* Input date as `dd-mm-yyyy`.
+* Check for validity using `LocalDate` and handle exceptions.
+
+---
+
+### 2️⃣0️⃣ **Display Day of the Week for a Given Date**
+
+* Input a date and display which day of the week it falls on.
+
+---
+
+### 2️⃣1️⃣ **Age Calculator Program**
+
+* Input a birth date.
+* Calculate exact age in years, months, and days using `Period` class.
+
+---
+
+### 2️⃣2️⃣ **Days Left Until Next Birthday**
+
+* Calculate how many days are left until the next occurrence of the user’s birthday.
+
+---
+
+### 2️⃣3️⃣ **Leap Year Checker Using LocalDate**
+
+* Accept a year and check if it’s a leap year using `isLeapYear()`.
+
+---
+
+## 🛠️ **E. Accessor Methods (Getters & Setters) and Encapsulation**
+
+### 2️⃣4️⃣ **Employee Class with Private Fields and Accessors**
+
+* Class `Employee` with private fields: name, id, salary.
+* Provide public getter and setter methods.
+* Include a method to increment salary.
+
+---
+
+### 2️⃣5️⃣ **Circle Class with Radius Validation**
+
+* Class `Circle` with private `radius`.
+* If a negative radius is set, throw an exception in setter method.
+
+---
+
+### 2️⃣6️⃣ **BankAccount Class with Deposit and Withdraw**
+
+* Use private attributes: accountNo, balance.
+* Write methods for deposit, withdraw with balance validation.
+
+---
+
+### 2️⃣7️⃣ **Product Class with Discount Logic using Getters**
+
+* Class `Product` with private `price`.
+* Method `getDiscountedPrice()` returns discounted price if price > ₹1000.
+
+---
+
+## 📦 **F. User-Defined Packages**
+
+### 2️⃣8️⃣ **Create a Package `geometry` with Area Calculation Classes**
+
+* Classes: `CircleArea`, `RectangleArea`, `TriangleArea`
+* Each class contains methods to calculate respective areas.
+* Import and use in a main class.
+
+---
+
+### 2️⃣9️⃣ **Create a Package `utilities` with a Class for String Manipulation**
+
+* Class `StringUtils` with methods: reverseString(), capitalizeWords(), removeSpaces().
+* Demonstrate usage by importing the package.
+
+---
+
+### 3️⃣0️⃣ **Package `banking` with Multiple Classes**
+
+* `Account`, `Transaction`, `Loan`.
+* Each class with its own method.
+* Use the package in a main application simulating simple banking operations.
+
 
